# HyperTrace

./: .gitignore  README.md
infra/: docker-compose.yml
python_backend/: main.py  main2.py  test.ipynb  test_loki.ipynb
rust_agent/: Cargo.toml  build.rs
rust_agent/infra/: docker-compose.yml
rust_agent/proto/: telemetry.proto
rust_agent/src/: main.rs
testing/: test-grpc-server.sh
