[package]
name = "rust_agent"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
sysinfo = "0.34"
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1" 

[build-dependencies]
tonic-build = "0.11"
tonic-reflection = "0.2"  # Add reflection support